--- a/default.css
+++ b/default.css
@@ -37,6 +37,8 @@ p {
   width: 1000px;
   margin: 0 auto;
   overflow: hidden;
+  padding-top: 30px;
+  padding-left: 100px;
 }
 
 .banner {
@@ -57,8 +59,9 @@ p {
 
 .section-content2 {
   margin: 30px auto;
-  width: 960px;
-  padding-right: 40px; 
+  float: left;
+  padding-left: 250px;
+  width: 1100px;
   box-sizing: border-box; 
 }
 
@@ -66,11 +69,16 @@ p {
   margin: 20px;
   float: left;
   font-size: 18px;
-  width: 600px;
+  width: 1000px;
 }
 
 .details p {
   margin: 2px 0;
+}
+
+.text {
+  float: left;
+  width: 600px;
 }
 
 /*.image {
@@ -89,15 +97,24 @@ p {
 .left-image img {
   width: 220px;
   float:left;
-  padding-top: 50px;
+  padding-top: 10px;
   padding-right: 50px;
   padding-bottom: 20px;
+}
+
+.details::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .footer {
   font-size: 12px;
   text-align: right;
-}
+  margin: 30px auto;
+  width: 960px;
+  padding-right: 150px; }
+
 
 h2 img {
   width: 775px;
@@ -118,8 +135,6 @@ nav {
   text-align: left;
   display: inline-block;
   text-align: center;
-  border: 1px solid #e3e3e3;
-  border-width: 1px 0;
   margin-left: 70px;
 }
 
@@ -136,11 +151,9 @@ nav li {
 }
 
 nav li:first-child a {
-  border-left: 1px solid #e3e3e3;
 }
 
 nav a {
-  border-right: 1px solid #e3e3e3;
   color: black;
   font-size: 15px;
   text-decoration: none;
@@ -149,6 +162,6 @@ nav a {
 }
 
 nav a:hover {
-  background-color: #efefef;
+  font-weight: bold;
 }
 
